# interfere_experiments

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
experiments/exp0/: mini_noise_experiments.py  noise_experiments.py
experiments/exp1/: generate_data.py
experiments/exp10/: main.py  run.sh  slurm_submit.sh
experiments/exp12/: main.py  run.sh  slurm_submit.sh
experiments/exp13/: main.py  run.sh  slurm_submit.sh
experiments/exp14/: main.py  run.sh  slurm_submit.sh
experiments/exp5/: exp5.0.out  main.py  params.pkl  run.sh
experiments/exp6/: exp6.0.out  main.py  requirements.txt  run.sh  slurm_submit.sh
experiments/exp7/: main.py  run.sh  slurm_submit.sh
experiments/exp8/: main.py  params.pkl  run.sh  slurm_submit.sh
experiments/exp9/: main.py  requirements.txt  run.sh  slurm_submit.sh
interfere_experiments/: __init__.py  control_vs_resp.py  control_vs_response.py  cross_validation.py  data_generators.py  experiment_models.py  quick_models.py
notebooks/: ConfoundersExpGPU.ipynb  Exp13Debug.ipynb  GeneratingInterfereBenchmark1.1.1.ipynb  GenerativeForecasterFaceOff[dissertation]Local.ipynb  SRI2_Integrator.ipynb  all_methods.ipynb  conda_reqirements.txt  debug.py  exp1_data_analysis.ipynb  goldilocks_zone.ipynb  ic2s2_figures.ipynb  noise_and_forecast_error.pkl  scratch.ipynb  system_noise_and_forecasting.ipynb
notebooks/exp6/: analysis6.0.ipynb  (+1 more)
tests/: test_control_vs_resp.py  test_control_vs_response.py  test_cross_validation.py  test_data_generators.py  test_experiment_models.py  test_quick_models.py
(+29 files in other folders)
